// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders with data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OurPledgeOverlay
    closeOurPledgeOverlay={[Function]}
    ourPledgeOverlayIsOpen={false}
    shippingInformation="foo"
    shippingPledge="foo"
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="wh100 t0 l0 bg-white-wash-blur fixed"
          onClick={[Function]}
/>,
        <div
          className="fixed bg-off-white-yellow"
>
          <div
                    className="flex flex-column items-center p3 fixed"
          >
                    <Button
                              childrenWrapperClassName=""
                              className="t0 r0 m3 fixed"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label=""
                              onClick={[Function]}
                              onMouseLeave={[Function]}
                              onMouseOver={[Function]}
                              openInCurrentTab={false}
                              shadow={false}
                              to=""
                              type="button"
                              variant="style-none"
                    >
                              <Image
                                        alt="Close button"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="/assets/images/close-icon.svg"
                                        style={Object {}}
                              />
                    </Button>
                    <div
                              className=""
                    >
                              <h2
                                        className="mb3 block-headline text-madison-blue"
                              >
                                        We Ship Nationwide
                              </h2>
                              <div>
                                        <h2
                                                  className="my2 callout text-madison-blue"
                                        >
                                                  Shipping information
                                        </h2>
                                        <p
                                                  className="mb2 markdown-block text-madison-blue"
                                                  dangerouslySetInnerHTML={
                                                            Object {
                                                                      "__html": "<p>foo</p>
                                                            ",
                                                                    }
                                                  }
                                        />
                              </div>
                              <div>
                                        <h2
                                                  className="my2 callout text-madison-blue"
                                        >
                                                  Shipping Pledge
                                        </h2>
                                        <p
                                                  className="markdown-block text-madison-blue"
                                                  dangerouslySetInnerHTML={
                                                            Object {
                                                                      "__html": "<p>foo</p>
                                                            ",
                                                                    }
                                                  }
                                        />
                              </div>
                    </div>
          </div>
</div>,
      ],
      "className": "z-overlay wh100 transition fixed t0 r0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "wh100 t0 l0 bg-white-wash-blur fixed",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex flex-column items-center p3 fixed"
>
            <Button
                        childrenWrapperClassName=""
                        className="t0 r0 m3 fixed"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
            >
                        <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon.svg"
                                    style={Object {}}
                        />
            </Button>
            <div
                        className=""
            >
                        <h2
                                    className="mb3 block-headline text-madison-blue"
                        >
                                    We Ship Nationwide
                        </h2>
                        <div>
                                    <h2
                                                className="my2 callout text-madison-blue"
                                    >
                                                Shipping information
                                    </h2>
                                    <p
                                                className="mb2 markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "<p>foo</p>
                                                            ",
                                                                      }
                                                }
                                    />
                        </div>
                        <div>
                                    <h2
                                                className="my2 callout text-madison-blue"
                                    >
                                                Shipping Pledge
                                    </h2>
                                    <p
                                                className="markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "<p>foo</p>
                                                            ",
                                                                      }
                                                }
                                    />
                        </div>
            </div>
</div>,
          "className": "fixed bg-off-white-yellow",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                childrenWrapperClassName=""
                className="t0 r0 m3 fixed"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="style-none"
>
                <Image
                                alt="Close button"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="/assets/images/close-icon.svg"
                                style={Object {}}
                />
</Button>,
              <div
                className=""
>
                <h2
                                className="mb3 block-headline text-madison-blue"
                >
                                We Ship Nationwide
                </h2>
                <div>
                                <h2
                                                className="my2 callout text-madison-blue"
                                >
                                                Shipping information
                                </h2>
                                <p
                                                className="mb2 markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                                Object {
                                                                                "__html": "<p>foo</p>
                                                                ",
                                                                              }
                                                }
                                />
                </div>
                <div>
                                <h2
                                                className="my2 callout text-madison-blue"
                                >
                                                Shipping Pledge
                                </h2>
                                <p
                                                className="markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                                Object {
                                                                                "__html": "<p>foo</p>
                                                                ",
                                                                              }
                                                }
                                />
                </div>
</div>,
            ],
            "className": "flex flex-column items-center p3 fixed",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Image
                  alt="Close button"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="/assets/images/close-icon.svg"
                  style={Object {}}
/>,
                "childrenWrapperClassName": "",
                "className": "t0 r0 m3 fixed",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseLeave": [Function],
                "onMouseOver": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Close button",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "/assets/images/close-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="mb3 block-headline text-madison-blue"
>
                    We Ship Nationwide
</h2>,
                  <div>
                    <h2
                                        className="my2 callout text-madison-blue"
                    >
                                        Shipping information
                    </h2>
                    <p
                                        className="mb2 markdown-block text-madison-blue"
                                        dangerouslySetInnerHTML={
                                                            Object {
                                                                                "__html": "<p>foo</p>
                                                            ",
                                                                              }
                                        }
                    />
</div>,
                  <div>
                    <h2
                                        className="my2 callout text-madison-blue"
                    >
                                        Shipping Pledge
                    </h2>
                    <p
                                        className="markdown-block text-madison-blue"
                                        dangerouslySetInnerHTML={
                                                            Object {
                                                                                "__html": "<p>foo</p>
                                                            ",
                                                                              }
                                        }
                    />
</div>,
                ],
                "className": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "We Ship Nationwide",
                    "className": "mb3 block-headline text-madison-blue",
                  },
                  "ref": null,
                  "rendered": "We Ship Nationwide",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h2
                        className="my2 callout text-madison-blue"
>
                        Shipping information
</h2>,
                      <p
                        className="mb2 markdown-block text-madison-blue"
                        dangerouslySetInnerHTML={
                                                Object {
                                                                        "__html": "<p>foo</p>
                                                ",
                                                                      }
                        }
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Shipping information",
                        "className": "my2 callout text-madison-blue",
                      },
                      "ref": null,
                      "rendered": "Shipping information",
                      "type": "h2",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "mb2 markdown-block text-madison-blue",
                        "dangerouslySetInnerHTML": Object {
                          "__html": "<p>foo</p>
",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h2
                        className="my2 callout text-madison-blue"
>
                        Shipping Pledge
</h2>,
                      <p
                        className="markdown-block text-madison-blue"
                        dangerouslySetInnerHTML={
                                                Object {
                                                                        "__html": "<p>foo</p>
                                                ",
                                                                      }
                        }
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Shipping Pledge",
                        "className": "my2 callout text-madison-blue",
                      },
                      "ref": null,
                      "rendered": "Shipping Pledge",
                      "type": "h2",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "markdown-block text-madison-blue",
                        "dangerouslySetInnerHTML": Object {
                          "__html": "<p>foo</p>
",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="wh100 t0 l0 bg-white-wash-blur fixed"
            onClick={[Function]}
/>,
          <div
            className="fixed bg-off-white-yellow"
>
            <div
                        className="flex flex-column items-center p3 fixed"
            >
                        <Button
                                    childrenWrapperClassName=""
                                    className="t0 r0 m3 fixed"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label=""
                                    onClick={[Function]}
                                    onMouseLeave={[Function]}
                                    onMouseOver={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="style-none"
                        >
                                    <Image
                                                alt="Close button"
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="/assets/images/close-icon.svg"
                                                style={Object {}}
                                    />
                        </Button>
                        <div
                                    className=""
                        >
                                    <h2
                                                className="mb3 block-headline text-madison-blue"
                                    >
                                                We Ship Nationwide
                                    </h2>
                                    <div>
                                                <h2
                                                            className="my2 callout text-madison-blue"
                                                >
                                                            Shipping information
                                                </h2>
                                                <p
                                                            className="mb2 markdown-block text-madison-blue"
                                                            dangerouslySetInnerHTML={
                                                                        Object {
                                                                                    "__html": "<p>foo</p>
                                                                        ",
                                                                                  }
                                                            }
                                                />
                                    </div>
                                    <div>
                                                <h2
                                                            className="my2 callout text-madison-blue"
                                                >
                                                            Shipping Pledge
                                                </h2>
                                                <p
                                                            className="markdown-block text-madison-blue"
                                                            dangerouslySetInnerHTML={
                                                                        Object {
                                                                                    "__html": "<p>foo</p>
                                                                        ",
                                                                                  }
                                                            }
                                                />
                                    </div>
                        </div>
            </div>
</div>,
        ],
        "className": "z-overlay wh100 transition fixed t0 r0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "wh100 t0 l0 bg-white-wash-blur fixed",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex flex-column items-center p3 fixed"
>
              <Button
                            childrenWrapperClassName=""
                            className="t0 r0 m3 fixed"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label=""
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseOver={[Function]}
                            openInCurrentTab={false}
                            shadow={false}
                            to=""
                            type="button"
                            variant="style-none"
              >
                            <Image
                                          alt="Close button"
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="/assets/images/close-icon.svg"
                                          style={Object {}}
                            />
              </Button>
              <div
                            className=""
              >
                            <h2
                                          className="mb3 block-headline text-madison-blue"
                            >
                                          We Ship Nationwide
                            </h2>
                            <div>
                                          <h2
                                                        className="my2 callout text-madison-blue"
                                          >
                                                        Shipping information
                                          </h2>
                                          <p
                                                        className="mb2 markdown-block text-madison-blue"
                                                        dangerouslySetInnerHTML={
                                                                      Object {
                                                                                    "__html": "<p>foo</p>
                                                                      ",
                                                                                  }
                                                        }
                                          />
                            </div>
                            <div>
                                          <h2
                                                        className="my2 callout text-madison-blue"
                                          >
                                                        Shipping Pledge
                                          </h2>
                                          <p
                                                        className="markdown-block text-madison-blue"
                                                        dangerouslySetInnerHTML={
                                                                      Object {
                                                                                    "__html": "<p>foo</p>
                                                                      ",
                                                                                  }
                                                        }
                                          />
                            </div>
              </div>
</div>,
            "className": "fixed bg-off-white-yellow",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  childrenWrapperClassName=""
                  className="t0 r0 m3 fixed"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label=""
                  onClick={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  openInCurrentTab={false}
                  shadow={false}
                  to=""
                  type="button"
                  variant="style-none"
>
                  <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon.svg"
                                    style={Object {}}
                  />
</Button>,
                <div
                  className=""
>
                  <h2
                                    className="mb3 block-headline text-madison-blue"
                  >
                                    We Ship Nationwide
                  </h2>
                  <div>
                                    <h2
                                                      className="my2 callout text-madison-blue"
                                    >
                                                      Shipping information
                                    </h2>
                                    <p
                                                      className="mb2 markdown-block text-madison-blue"
                                                      dangerouslySetInnerHTML={
                                                                        Object {
                                                                                          "__html": "<p>foo</p>
                                                                        ",
                                                                                        }
                                                      }
                                    />
                  </div>
                  <div>
                                    <h2
                                                      className="my2 callout text-madison-blue"
                                    >
                                                      Shipping Pledge
                                    </h2>
                                    <p
                                                      className="markdown-block text-madison-blue"
                                                      dangerouslySetInnerHTML={
                                                                        Object {
                                                                                          "__html": "<p>foo</p>
                                                                        ",
                                                                                        }
                                                      }
                                    />
                  </div>
</div>,
              ],
              "className": "flex flex-column items-center p3 fixed",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <Image
                    alt="Close button"
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="/assets/images/close-icon.svg"
                    style={Object {}}
/>,
                  "childrenWrapperClassName": "",
                  "className": "t0 r0 m3 fixed",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "",
                  "onClick": [Function],
                  "onMouseLeave": [Function],
                  "onMouseOver": [Function],
                  "openInCurrentTab": false,
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "style-none",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Close button",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "/assets/images/close-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h2
                      className="mb3 block-headline text-madison-blue"
>
                      We Ship Nationwide
</h2>,
                    <div>
                      <h2
                                            className="my2 callout text-madison-blue"
                      >
                                            Shipping information
                      </h2>
                      <p
                                            className="mb2 markdown-block text-madison-blue"
                                            dangerouslySetInnerHTML={
                                                                  Object {
                                                                                        "__html": "<p>foo</p>
                                                                  ",
                                                                                      }
                                            }
                      />
</div>,
                    <div>
                      <h2
                                            className="my2 callout text-madison-blue"
                      >
                                            Shipping Pledge
                      </h2>
                      <p
                                            className="markdown-block text-madison-blue"
                                            dangerouslySetInnerHTML={
                                                                  Object {
                                                                                        "__html": "<p>foo</p>
                                                                  ",
                                                                                      }
                                            }
                      />
</div>,
                  ],
                  "className": "",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "We Ship Nationwide",
                      "className": "mb3 block-headline text-madison-blue",
                    },
                    "ref": null,
                    "rendered": "We Ship Nationwide",
                    "type": "h2",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h2
                          className="my2 callout text-madison-blue"
>
                          Shipping information
</h2>,
                        <p
                          className="mb2 markdown-block text-madison-blue"
                          dangerouslySetInnerHTML={
                                                    Object {
                                                                              "__html": "<p>foo</p>
                                                    ",
                                                                            }
                          }
/>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Shipping information",
                          "className": "my2 callout text-madison-blue",
                        },
                        "ref": null,
                        "rendered": "Shipping information",
                        "type": "h2",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "mb2 markdown-block text-madison-blue",
                          "dangerouslySetInnerHTML": Object {
                            "__html": "<p>foo</p>
",
                          },
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "p",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h2
                          className="my2 callout text-madison-blue"
>
                          Shipping Pledge
</h2>,
                        <p
                          className="markdown-block text-madison-blue"
                          dangerouslySetInnerHTML={
                                                    Object {
                                                                              "__html": "<p>foo</p>
                                                    ",
                                                                            }
                          }
/>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Shipping Pledge",
                          "className": "my2 callout text-madison-blue",
                        },
                        "ref": null,
                        "rendered": "Shipping Pledge",
                        "type": "h2",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "markdown-block text-madison-blue",
                          "dangerouslySetInnerHTML": Object {
                            "__html": "<p>foo</p>
",
                          },
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "p",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`renders without data 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <OurPledgeOverlay
    closeOurPledgeOverlay={[Function]}
    ourPledgeOverlayIsOpen={false}
    shippingInformation=""
    shippingPledge=""
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <div
          className="wh100 t0 l0 bg-white-wash-blur fixed"
          onClick={[Function]}
/>,
        <div
          className="fixed bg-off-white-yellow"
>
          <div
                    className="flex flex-column items-center p3 fixed"
          >
                    <Button
                              childrenWrapperClassName=""
                              className="t0 r0 m3 fixed"
                              color="white-denim"
                              disabled={false}
                              fullWidth={false}
                              hover="shadow"
                              label=""
                              onClick={[Function]}
                              onMouseLeave={[Function]}
                              onMouseOver={[Function]}
                              openInCurrentTab={false}
                              shadow={false}
                              to=""
                              type="button"
                              variant="style-none"
                    >
                              <Image
                                        alt="Close button"
                                        bg={false}
                                        className="w100"
                                        onImgLoad={[Function]}
                                        src="/assets/images/close-icon.svg"
                                        style={Object {}}
                              />
                    </Button>
                    <div
                              className=""
                    >
                              <h2
                                        className="mb3 block-headline text-madison-blue"
                              >
                                        We Ship Nationwide
                              </h2>
                              <div>
                                        <h2
                                                  className="my2 callout text-madison-blue"
                                        >
                                                  Shipping information
                                        </h2>
                                        <p
                                                  className="mb2 markdown-block text-madison-blue"
                                                  dangerouslySetInnerHTML={
                                                            Object {
                                                                      "__html": "",
                                                                    }
                                                  }
                                        />
                              </div>
                              <div>
                                        <h2
                                                  className="my2 callout text-madison-blue"
                                        >
                                                  Shipping Pledge
                                        </h2>
                                        <p
                                                  className="markdown-block text-madison-blue"
                                                  dangerouslySetInnerHTML={
                                                            Object {
                                                                      "__html": "",
                                                                    }
                                                  }
                                        />
                              </div>
                    </div>
          </div>
</div>,
      ],
      "className": "z-overlay wh100 transition fixed t0 r0",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "wh100 t0 l0 bg-white-wash-blur fixed",
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <div
            className="flex flex-column items-center p3 fixed"
>
            <Button
                        childrenWrapperClassName=""
                        className="t0 r0 m3 fixed"
                        color="white-denim"
                        disabled={false}
                        fullWidth={false}
                        hover="shadow"
                        label=""
                        onClick={[Function]}
                        onMouseLeave={[Function]}
                        onMouseOver={[Function]}
                        openInCurrentTab={false}
                        shadow={false}
                        to=""
                        type="button"
                        variant="style-none"
            >
                        <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon.svg"
                                    style={Object {}}
                        />
            </Button>
            <div
                        className=""
            >
                        <h2
                                    className="mb3 block-headline text-madison-blue"
                        >
                                    We Ship Nationwide
                        </h2>
                        <div>
                                    <h2
                                                className="my2 callout text-madison-blue"
                                    >
                                                Shipping information
                                    </h2>
                                    <p
                                                className="mb2 markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "",
                                                                      }
                                                }
                                    />
                        </div>
                        <div>
                                    <h2
                                                className="my2 callout text-madison-blue"
                                    >
                                                Shipping Pledge
                                    </h2>
                                    <p
                                                className="markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                            Object {
                                                                        "__html": "",
                                                                      }
                                                }
                                    />
                        </div>
            </div>
</div>,
          "className": "fixed bg-off-white-yellow",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <Button
                childrenWrapperClassName=""
                className="t0 r0 m3 fixed"
                color="white-denim"
                disabled={false}
                fullWidth={false}
                hover="shadow"
                label=""
                onClick={[Function]}
                onMouseLeave={[Function]}
                onMouseOver={[Function]}
                openInCurrentTab={false}
                shadow={false}
                to=""
                type="button"
                variant="style-none"
>
                <Image
                                alt="Close button"
                                bg={false}
                                className="w100"
                                onImgLoad={[Function]}
                                src="/assets/images/close-icon.svg"
                                style={Object {}}
                />
</Button>,
              <div
                className=""
>
                <h2
                                className="mb3 block-headline text-madison-blue"
                >
                                We Ship Nationwide
                </h2>
                <div>
                                <h2
                                                className="my2 callout text-madison-blue"
                                >
                                                Shipping information
                                </h2>
                                <p
                                                className="mb2 markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                                Object {
                                                                                "__html": "",
                                                                              }
                                                }
                                />
                </div>
                <div>
                                <h2
                                                className="my2 callout text-madison-blue"
                                >
                                                Shipping Pledge
                                </h2>
                                <p
                                                className="markdown-block text-madison-blue"
                                                dangerouslySetInnerHTML={
                                                                Object {
                                                                                "__html": "",
                                                                              }
                                                }
                                />
                </div>
</div>,
            ],
            "className": "flex flex-column items-center p3 fixed",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "children": <Image
                  alt="Close button"
                  bg={false}
                  className="w100"
                  onImgLoad={[Function]}
                  src="/assets/images/close-icon.svg"
                  style={Object {}}
/>,
                "childrenWrapperClassName": "",
                "className": "t0 r0 m3 fixed",
                "color": "white-denim",
                "disabled": false,
                "fullWidth": false,
                "hover": "shadow",
                "label": "",
                "onClick": [Function],
                "onMouseLeave": [Function],
                "onMouseOver": [Function],
                "openInCurrentTab": false,
                "shadow": false,
                "to": "",
                "type": "button",
                "variant": "style-none",
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "alt": "Close button",
                  "bg": false,
                  "children": null,
                  "className": "w100",
                  "onImgLoad": [Function],
                  "src": "/assets/images/close-icon.svg",
                  "style": Object {},
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h2
                    className="mb3 block-headline text-madison-blue"
>
                    We Ship Nationwide
</h2>,
                  <div>
                    <h2
                                        className="my2 callout text-madison-blue"
                    >
                                        Shipping information
                    </h2>
                    <p
                                        className="mb2 markdown-block text-madison-blue"
                                        dangerouslySetInnerHTML={
                                                            Object {
                                                                                "__html": "",
                                                                              }
                                        }
                    />
</div>,
                  <div>
                    <h2
                                        className="my2 callout text-madison-blue"
                    >
                                        Shipping Pledge
                    </h2>
                    <p
                                        className="markdown-block text-madison-blue"
                                        dangerouslySetInnerHTML={
                                                            Object {
                                                                                "__html": "",
                                                                              }
                                        }
                    />
</div>,
                ],
                "className": "",
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "We Ship Nationwide",
                    "className": "mb3 block-headline text-madison-blue",
                  },
                  "ref": null,
                  "rendered": "We Ship Nationwide",
                  "type": "h2",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h2
                        className="my2 callout text-madison-blue"
>
                        Shipping information
</h2>,
                      <p
                        className="mb2 markdown-block text-madison-blue"
                        dangerouslySetInnerHTML={
                                                Object {
                                                                        "__html": "",
                                                                      }
                        }
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Shipping information",
                        "className": "my2 callout text-madison-blue",
                      },
                      "ref": null,
                      "rendered": "Shipping information",
                      "type": "h2",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "mb2 markdown-block text-madison-blue",
                        "dangerouslySetInnerHTML": Object {
                          "__html": "",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": Array [
                      <h2
                        className="my2 callout text-madison-blue"
>
                        Shipping Pledge
</h2>,
                      <p
                        className="markdown-block text-madison-blue"
                        dangerouslySetInnerHTML={
                                                Object {
                                                                        "__html": "",
                                                                      }
                        }
/>,
                    ],
                  },
                  "ref": null,
                  "rendered": Array [
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "children": "Shipping Pledge",
                        "className": "my2 callout text-madison-blue",
                      },
                      "ref": null,
                      "rendered": "Shipping Pledge",
                      "type": "h2",
                    },
                    Object {
                      "instance": null,
                      "key": undefined,
                      "nodeType": "host",
                      "props": Object {
                        "className": "markdown-block text-madison-blue",
                        "dangerouslySetInnerHTML": Object {
                          "__html": "",
                        },
                      },
                      "ref": null,
                      "rendered": null,
                      "type": "p",
                    },
                  ],
                  "type": "div",
                },
              ],
              "type": "div",
            },
          ],
          "type": "div",
        },
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <div
            className="wh100 t0 l0 bg-white-wash-blur fixed"
            onClick={[Function]}
/>,
          <div
            className="fixed bg-off-white-yellow"
>
            <div
                        className="flex flex-column items-center p3 fixed"
            >
                        <Button
                                    childrenWrapperClassName=""
                                    className="t0 r0 m3 fixed"
                                    color="white-denim"
                                    disabled={false}
                                    fullWidth={false}
                                    hover="shadow"
                                    label=""
                                    onClick={[Function]}
                                    onMouseLeave={[Function]}
                                    onMouseOver={[Function]}
                                    openInCurrentTab={false}
                                    shadow={false}
                                    to=""
                                    type="button"
                                    variant="style-none"
                        >
                                    <Image
                                                alt="Close button"
                                                bg={false}
                                                className="w100"
                                                onImgLoad={[Function]}
                                                src="/assets/images/close-icon.svg"
                                                style={Object {}}
                                    />
                        </Button>
                        <div
                                    className=""
                        >
                                    <h2
                                                className="mb3 block-headline text-madison-blue"
                                    >
                                                We Ship Nationwide
                                    </h2>
                                    <div>
                                                <h2
                                                            className="my2 callout text-madison-blue"
                                                >
                                                            Shipping information
                                                </h2>
                                                <p
                                                            className="mb2 markdown-block text-madison-blue"
                                                            dangerouslySetInnerHTML={
                                                                        Object {
                                                                                    "__html": "",
                                                                                  }
                                                            }
                                                />
                                    </div>
                                    <div>
                                                <h2
                                                            className="my2 callout text-madison-blue"
                                                >
                                                            Shipping Pledge
                                                </h2>
                                                <p
                                                            className="markdown-block text-madison-blue"
                                                            dangerouslySetInnerHTML={
                                                                        Object {
                                                                                    "__html": "",
                                                                                  }
                                                            }
                                                />
                                    </div>
                        </div>
            </div>
</div>,
        ],
        "className": "z-overlay wh100 transition fixed t0 r0",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "wh100 t0 l0 bg-white-wash-blur fixed",
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <div
              className="flex flex-column items-center p3 fixed"
>
              <Button
                            childrenWrapperClassName=""
                            className="t0 r0 m3 fixed"
                            color="white-denim"
                            disabled={false}
                            fullWidth={false}
                            hover="shadow"
                            label=""
                            onClick={[Function]}
                            onMouseLeave={[Function]}
                            onMouseOver={[Function]}
                            openInCurrentTab={false}
                            shadow={false}
                            to=""
                            type="button"
                            variant="style-none"
              >
                            <Image
                                          alt="Close button"
                                          bg={false}
                                          className="w100"
                                          onImgLoad={[Function]}
                                          src="/assets/images/close-icon.svg"
                                          style={Object {}}
                            />
              </Button>
              <div
                            className=""
              >
                            <h2
                                          className="mb3 block-headline text-madison-blue"
                            >
                                          We Ship Nationwide
                            </h2>
                            <div>
                                          <h2
                                                        className="my2 callout text-madison-blue"
                                          >
                                                        Shipping information
                                          </h2>
                                          <p
                                                        className="mb2 markdown-block text-madison-blue"
                                                        dangerouslySetInnerHTML={
                                                                      Object {
                                                                                    "__html": "",
                                                                                  }
                                                        }
                                          />
                            </div>
                            <div>
                                          <h2
                                                        className="my2 callout text-madison-blue"
                                          >
                                                        Shipping Pledge
                                          </h2>
                                          <p
                                                        className="markdown-block text-madison-blue"
                                                        dangerouslySetInnerHTML={
                                                                      Object {
                                                                                    "__html": "",
                                                                                  }
                                                        }
                                          />
                            </div>
              </div>
</div>,
            "className": "fixed bg-off-white-yellow",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <Button
                  childrenWrapperClassName=""
                  className="t0 r0 m3 fixed"
                  color="white-denim"
                  disabled={false}
                  fullWidth={false}
                  hover="shadow"
                  label=""
                  onClick={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  openInCurrentTab={false}
                  shadow={false}
                  to=""
                  type="button"
                  variant="style-none"
>
                  <Image
                                    alt="Close button"
                                    bg={false}
                                    className="w100"
                                    onImgLoad={[Function]}
                                    src="/assets/images/close-icon.svg"
                                    style={Object {}}
                  />
</Button>,
                <div
                  className=""
>
                  <h2
                                    className="mb3 block-headline text-madison-blue"
                  >
                                    We Ship Nationwide
                  </h2>
                  <div>
                                    <h2
                                                      className="my2 callout text-madison-blue"
                                    >
                                                      Shipping information
                                    </h2>
                                    <p
                                                      className="mb2 markdown-block text-madison-blue"
                                                      dangerouslySetInnerHTML={
                                                                        Object {
                                                                                          "__html": "",
                                                                                        }
                                                      }
                                    />
                  </div>
                  <div>
                                    <h2
                                                      className="my2 callout text-madison-blue"
                                    >
                                                      Shipping Pledge
                                    </h2>
                                    <p
                                                      className="markdown-block text-madison-blue"
                                                      dangerouslySetInnerHTML={
                                                                        Object {
                                                                                          "__html": "",
                                                                                        }
                                                      }
                                    />
                  </div>
</div>,
              ],
              "className": "flex flex-column items-center p3 fixed",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "children": <Image
                    alt="Close button"
                    bg={false}
                    className="w100"
                    onImgLoad={[Function]}
                    src="/assets/images/close-icon.svg"
                    style={Object {}}
/>,
                  "childrenWrapperClassName": "",
                  "className": "t0 r0 m3 fixed",
                  "color": "white-denim",
                  "disabled": false,
                  "fullWidth": false,
                  "hover": "shadow",
                  "label": "",
                  "onClick": [Function],
                  "onMouseLeave": [Function],
                  "onMouseOver": [Function],
                  "openInCurrentTab": false,
                  "shadow": false,
                  "to": "",
                  "type": "button",
                  "variant": "style-none",
                },
                "ref": null,
                "rendered": Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "class",
                  "props": Object {
                    "alt": "Close button",
                    "bg": false,
                    "children": null,
                    "className": "w100",
                    "onImgLoad": [Function],
                    "src": "/assets/images/close-icon.svg",
                    "style": Object {},
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    <h2
                      className="mb3 block-headline text-madison-blue"
>
                      We Ship Nationwide
</h2>,
                    <div>
                      <h2
                                            className="my2 callout text-madison-blue"
                      >
                                            Shipping information
                      </h2>
                      <p
                                            className="mb2 markdown-block text-madison-blue"
                                            dangerouslySetInnerHTML={
                                                                  Object {
                                                                                        "__html": "",
                                                                                      }
                                            }
                      />
</div>,
                    <div>
                      <h2
                                            className="my2 callout text-madison-blue"
                      >
                                            Shipping Pledge
                      </h2>
                      <p
                                            className="markdown-block text-madison-blue"
                                            dangerouslySetInnerHTML={
                                                                  Object {
                                                                                        "__html": "",
                                                                                      }
                                            }
                      />
</div>,
                  ],
                  "className": "",
                },
                "ref": null,
                "rendered": Array [
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "We Ship Nationwide",
                      "className": "mb3 block-headline text-madison-blue",
                    },
                    "ref": null,
                    "rendered": "We Ship Nationwide",
                    "type": "h2",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h2
                          className="my2 callout text-madison-blue"
>
                          Shipping information
</h2>,
                        <p
                          className="mb2 markdown-block text-madison-blue"
                          dangerouslySetInnerHTML={
                                                    Object {
                                                                              "__html": "",
                                                                            }
                          }
/>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Shipping information",
                          "className": "my2 callout text-madison-blue",
                        },
                        "ref": null,
                        "rendered": "Shipping information",
                        "type": "h2",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "mb2 markdown-block text-madison-blue",
                          "dangerouslySetInnerHTML": Object {
                            "__html": "",
                          },
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "p",
                      },
                    ],
                    "type": "div",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": Array [
                        <h2
                          className="my2 callout text-madison-blue"
>
                          Shipping Pledge
</h2>,
                        <p
                          className="markdown-block text-madison-blue"
                          dangerouslySetInnerHTML={
                                                    Object {
                                                                              "__html": "",
                                                                            }
                          }
/>,
                      ],
                    },
                    "ref": null,
                    "rendered": Array [
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "children": "Shipping Pledge",
                          "className": "my2 callout text-madison-blue",
                        },
                        "ref": null,
                        "rendered": "Shipping Pledge",
                        "type": "h2",
                      },
                      Object {
                        "instance": null,
                        "key": undefined,
                        "nodeType": "host",
                        "props": Object {
                          "className": "markdown-block text-madison-blue",
                          "dangerouslySetInnerHTML": Object {
                            "__html": "",
                          },
                        },
                        "ref": null,
                        "rendered": null,
                        "type": "p",
                      },
                    ],
                    "type": "div",
                  },
                ],
                "type": "div",
              },
            ],
            "type": "div",
          },
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
